fix tail in gap

--- a/front-angular/src/app/components/tail/tail.component.css
+++ b/front-angular/src/app/components/tail/tail.component.css
@@ -3,5 +3,5 @@
 }
 
 .tail-in {
-  clip-path: polygon(100% 40%, 0 0, 100% 0);
+  clip-path: polygon(100% 40%, 0 0, 110% 0);
 }
